vendor/bifrost/tls/bindings/x509.odin


// X509V3_ADD_DEFAULT causes the function to fail if the extension was already
// present.
X509V3_ADD_DEFAULT :: 0

// X509V3_ADD_APPEND causes the function to unconditionally appended the new
// extension to to the extensions list, even if there is a duplicate.
X509V3_ADD_APPEND :: 1

// X509V3_ADD_REPLACE causes the function to replace the existing extension, or
// append if it is not present.
X509V3_ADD_REPLACE :: 2

// X509V3_ADD_REPLACE_EXISTING causes the function to replace the existing
// extension and fail if it is not present.
X509V3_ADD_REPLACE_EXISTING :: 3

// X509V3_ADD_KEEP_EXISTING causes the function to succeed without replacing the
// extension if already present.
X509V3_ADD_KEEP_EXISTING :: 4

// X509V3_ADD_DELETE causes the function to remove the matching extension. No
// new extension is added. If there is no matching extension, the function
// fails. The |value| parameter is ignored in this mode.
X509V3_ADD_DELETE :: 5

// X509V3_ADD_SILENT may be ORed into one of the values above to indicate the
// function should not add to the error queue on duplicate or missing extension.
// The function will continue to return zero in those cases, and it will
// continue to return -1 and add to the error queue on other errors.
X509V3_ADD_SILENT :: 0x10

@(default_calling_convention="c")
foreign lib {
	// X509V3_add1_i2d casts |value| to the type that corresponds to |nid|,
	// serializes it, and appends it to the extension list in |*x|. If |*x| is NULL,
	// it will set |*x| to a newly-allocated |STACK_OF(X509_EXTENSION)| as needed.
	// The |crit| parameter determines whether the new extension is critical.
	// |flags| may be some combination of the |X509V3_ADD_*| constants to control
	// the function's behavior on duplicate extension.
	//
	// This function returns one on success, zero if the operation failed due to a
	// missing or duplicate extension, and -1 on other errors.
	//
	// WARNING: Casting |value| to the wrong type is a potentially exploitable
	// memory error, so callers must ensure |value|'s type matches |nid|. See the
	// list at the top of this section for the correct types.
	X509V3_add1_i2d :: proc(x: ^^stack_st_X509_EXTENSION, nid: i32, value: rawptr, crit: i32, flags: c.ulong) -> i32 ---
}

// A BASIC_CONSTRAINTS_st, aka |BASIC_CONSTRAINTS| represents an
// BasicConstraints structure (RFC 5280).
BASIC_CONSTRAINTS_st :: struct {
	ca:      ASN1_BOOLEAN,
	pathlen: ^ASN1_INTEGER,
}

@(default_calling_convention="c")
foreign lib {
	// BASIC_CONSTRAINTS_new returns a newly-allocated, empty |BASIC_CONSTRAINTS|
	// object, or NULL on error.
	BASIC_CONSTRAINTS_new :: proc() -> ^BASIC_CONSTRAINTS ---

	// BASIC_CONSTRAINTS_free releases memory associated with |bcons|.
	BASIC_CONSTRAINTS_free :: proc(bcons: ^BASIC_CONSTRAINTS) ---

	// d2i_BASIC_CONSTRAINTS parses up to |len| bytes from |*inp| as a DER-encoded
	// BasicConstraints (RFC 5280), as described in |d2i_SAMPLE|.
	d2i_BASIC_CONSTRAINTS :: proc(out: ^^BASIC_CONSTRAINTS, inp: ^^u8, len: c.long) -> ^BASIC_CONSTRAINTS ---

	// i2d_BASIC_CONSTRAINTS marshals |bcons| as a DER-encoded BasicConstraints (RFC
	// 5280), as described in |i2d_SAMPLE|.
	i2d_BASIC_CONSTRAINTS :: proc(bcons: ^BASIC_CONSTRAINTS, outp: ^^u8) -> i32 ---
}

// Extended key usage.
//
// The extended key usage extension (RFC 5280, section 4.2.1.12) indicates the
// purposes of the certificate's public key. Such constraints are important to
// avoid cross-protocol attacks.
EXTENDED_KEY_USAGE :: stack_st_ASN1_OBJECT

@(default_calling_convention="c")
foreign lib {
	// EXTENDED_KEY_USAGE_new returns a newly-allocated, empty |EXTENDED_KEY_USAGE|
	// object, or NULL on error.
	EXTENDED_KEY_USAGE_new :: proc() -> ^EXTENDED_KEY_USAGE ---

	// EXTENDED_KEY_USAGE_free releases memory associated with |eku|.
	EXTENDED_KEY_USAGE_free :: proc(eku: ^EXTENDED_KEY_USAGE) ---

	// d2i_EXTENDED_KEY_USAGE parses up to |len| bytes from |*inp| as a DER-encoded
	// ExtKeyUsageSyntax (RFC 5280), as described in |d2i_SAMPLE|.
	d2i_EXTENDED_KEY_USAGE :: proc(out: ^^EXTENDED_KEY_USAGE, inp: ^^u8, len: c.long) -> ^EXTENDED_KEY_USAGE ---

	// i2d_EXTENDED_KEY_USAGE marshals |eku| as a DER-encoded ExtKeyUsageSyntax (RFC
	// 5280), as described in |i2d_SAMPLE|.
	i2d_EXTENDED_KEY_USAGE :: proc(eku: ^EXTENDED_KEY_USAGE, outp: ^^u8) -> i32 ---
}

// General names.
//
// A |GENERAL_NAME| represents an X.509 GeneralName structure, defined in RFC
// 5280, Section 4.2.1.6. General names are distinct from names (|X509_NAME|). A
// general name is a CHOICE type which may contain one of several name types,
// most commonly a DNS name or an IP address. General names most commonly appear
// in the subject alternative name (SAN) extension, though they are also used in
// other extensions.
//
// Many extensions contain a SEQUENCE OF GeneralName, or GeneralNames, so
// |STACK_OF(GENERAL_NAME)| is defined and aliased to |GENERAL_NAMES|.
otherName_st :: struct {
	type_id: ^ASN1_OBJECT,
	value:   ^ASN1_TYPE,
}

// General names.
//
// A |GENERAL_NAME| represents an X.509 GeneralName structure, defined in RFC
// 5280, Section 4.2.1.6. General names are distinct from names (|X509_NAME|). A
// general name is a CHOICE type which may contain one of several name types,
// most commonly a DNS name or an IP address. General names most commonly appear
// in the subject alternative name (SAN) extension, though they are also used in
// other extensions.
//
// Many extensions contain a SEQUENCE OF GeneralName, or GeneralNames, so
// |STACK_OF(GENERAL_NAME)| is defined and aliased to |GENERAL_NAMES|.
OTHERNAME :: otherName_st

EDIPartyName_st :: struct {
	nameAssigner: ^ASN1_STRING,
	partyName:    ^ASN1_STRING,
}

EDIPARTYNAME :: EDIPartyName_st

// GEN_* are constants for the |type| field of |GENERAL_NAME|, defined below.
GEN_OTHERNAME :: 0
GEN_EMAIL     :: 1
GEN_DNS       :: 2
GEN_X400      :: 3
GEN_DIRNAME   :: 4
GEN_EDIPARTY  :: 5
GEN_URI       :: 6
GEN_IPADD     :: 7
GEN_RID       :: 8

// A GENERAL_NAME_st, aka |GENERAL_NAME|, represents an X.509 GeneralName. The
// |type| field determines which member of |d| is active. A |GENERAL_NAME| may
// also be empty, in which case |type| is -1 and |d| is NULL. Empty
// |GENERAL_NAME|s are invalid and will never be returned from the parser, but
// may be created temporarily, e.g. by |GENERAL_NAME_new|.
//
// WARNING: |type| and |d| must be kept consistent. An inconsistency will result
// in a potentially exploitable memory error.
GENERAL_NAME_st :: struct {
	type: i32,

	d: struct #raw_union {
		ptr:                       cstring,
		otherName:                 ^OTHERNAME,
		rfc822Name:                ^ASN1_IA5STRING,
		dNSName:                   ^ASN1_IA5STRING,
		x400Address:               ^ASN1_STRING,
		directoryName:             ^X509_NAME,
		ediPartyName:              ^EDIPARTYNAME,
		uniformResourceIdentifier: ^ASN1_IA5STRING,
		iPAddress:                 ^ASN1_OCTET_STRING,
		registeredID:              ^ASN1_OBJECT,

		// Old names
		ip:   ^ASN1_OCTET_STRING, // iPAddress
		dirn: ^X509_NAME,         // dirn
		ia5:  ^ASN1_IA5STRING,    // rfc822Name, dNSName, uniformResourceIdentifier
		rid:  ^ASN1_OBJECT,       // registeredID
	},
}

@(default_calling_convention="c")
foreign lib {
	// GENERAL_NAME_new returns a new, empty |GENERAL_NAME|, or NULL on error.
	GENERAL_NAME_new :: proc() -> ^GENERAL_NAME ---

	// GENERAL_NAME_free releases memory associated with |gen|.
	GENERAL_NAME_free :: proc(gen: ^GENERAL_NAME) ---

	// d2i_GENERAL_NAME parses up to |len| bytes from |*inp| as a DER-encoded X.509
	// GeneralName (RFC 5280), as described in |d2i_SAMPLE|.
	d2i_GENERAL_NAME :: proc(out: ^^GENERAL_NAME, inp: ^^u8, len: c.long) -> ^GENERAL_NAME ---

	// i2d_GENERAL_NAME marshals |in| as a DER-encoded X.509 GeneralName (RFC 5280),
	// as described in |i2d_SAMPLE|.
	i2d_GENERAL_NAME :: proc(_in: ^GENERAL_NAME, outp: ^^u8) -> i32 ---

	// GENERAL_NAME_dup returns a newly-allocated copy of |gen|, or NULL on error.
	// This function works by serializing the structure, so it will fail if |gen| is
	// empty.
	GENERAL_NAME_dup :: proc(gen: ^GENERAL_NAME) -> ^GENERAL_NAME ---

	// GENERAL_NAMES_new returns a new, empty |GENERAL_NAMES|, or NULL on error.
	GENERAL_NAMES_new :: proc() -> ^GENERAL_NAMES ---

	// GENERAL_NAMES_free releases memory associated with |gens|.
	GENERAL_NAMES_free :: proc(gens: ^GENERAL_NAMES) ---

	// d2i_GENERAL_NAMES parses up to |len| bytes from |*inp| as a DER-encoded
	// SEQUENCE OF GeneralName, as described in |d2i_SAMPLE|.
	d2i_GENERAL_NAMES :: proc(out: ^^GENERAL_NAMES, inp: ^^u8, len: c.long) -> ^GENERAL_NAMES ---

	// i2d_GENERAL_NAMES marshals |in| as a DER-encoded SEQUENCE OF GeneralName, as
	// described in |i2d_SAMPLE|.
	i2d_GENERAL_NAMES :: proc(_in: ^GENERAL_NAMES, outp: ^^u8) -> i32 ---

	// OTHERNAME_new returns a new, empty |OTHERNAME|, or NULL on error.
	OTHERNAME_new :: proc() -> ^OTHERNAME ---

	// OTHERNAME_free releases memory associated with |name|.
	OTHERNAME_free :: proc(name: ^OTHERNAME) ---

	// EDIPARTYNAME_new returns a new, empty |EDIPARTYNAME|, or NULL on error.
	// EDIPartyName is rarely used in practice, so callers are unlikely to need this
	// function.
	EDIPARTYNAME_new :: proc() -> ^EDIPARTYNAME ---

	// EDIPARTYNAME_free releases memory associated with |name|. EDIPartyName is
	// rarely used in practice, so callers are unlikely to need this function.
	EDIPARTYNAME_free :: proc(name: ^EDIPARTYNAME) ---

	// GENERAL_NAME_set0_value set |gen|'s type and value to |type| and |value|.
	// |type| must be a |GEN_*| constant and |value| must be an object of the
	// corresponding type. |gen| takes ownership of |value|, so |value| must have
	// been an allocated object.
	//
	// WARNING: |gen| must be empty (typically as returned from |GENERAL_NAME_new|)
	// before calling this function. If |gen| already contained a value, the
	// previous contents will be leaked.
	GENERAL_NAME_set0_value :: proc(gen: ^GENERAL_NAME, type: i32, value: rawptr) ---

	// GENERAL_NAME_get0_value returns the in-memory representation of |gen|'s
	// contents and, |out_type| is not NULL, sets |*out_type| to the type of |gen|,
	// which will be a |GEN_*| constant. If |gen| is incomplete, the return value
	// will be NULL and the type will be -1.
	//
	// WARNING: Casting the result of this function to the wrong type is a
	// potentially exploitable memory error. Callers must check |gen|'s type, either
	// via |*out_type| or checking |gen->type| directly, before inspecting the
	// result.
	//
	// WARNING: This function is not const-correct. The return value should be
	// const. Callers should not mutate the returned object.
	GENERAL_NAME_get0_value :: proc(gen: ^GENERAL_NAME, out_type: ^i32) -> rawptr ---

	// GENERAL_NAME_set0_othername sets |gen| to be an OtherName with type |oid| and
	// value |value|. On success, it returns one and takes ownership of |oid| and
	// |value|, which must be created in a way compatible with |ASN1_OBJECT_free|
	// and |ASN1_TYPE_free|, respectively. On allocation failure, it returns zero.
	// In the failure case, the caller retains ownership of |oid| and |value| and
	// must release them when done.
	//
	// WARNING: |gen| must be empty (typically as returned from |GENERAL_NAME_new|)
	// before calling this function. If |gen| already contained a value, the
	// previously contents will be leaked.
	GENERAL_NAME_set0_othername :: proc(gen: ^GENERAL_NAME, oid: ^ASN1_OBJECT, value: ^ASN1_TYPE) -> i32 ---
